add users methods and some fix

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "fessnik/zoom",
-    "description": "Complete zoom API client for Laravel",
+    "description": "zoom API client for Laravel",
     "keywords": ["zoom", "api", "client", "laravel"],
     "license": "MIT",
     "authors": [
